<resources>
    <string name="app_name">EatAtNotts</string>
    <string name="title_home">Home</string>
    <string name="title_order">Order</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customer">Customer</string>
    <string name="hawker">Hawker</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password:</string>
    <string name="e_mail">E-Mail:</string>
    <string name="please_enter_username">Please Enter Username</string>
    <string name="username">Username:</string>
    <string name="eatatnotts">EatAtNotts</string>
    <string name="please_enter_e_mail">Please Enter E-Mail</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="add">Add</string>
    <string name="customer_order">Order List</string>
    <string name="activity">Activity</string>
    <string name="food">Food</string>
    <string name="activity_name">Activity Name:</string>
    <string name="description">Description:</string>
    <string name="please_enter_activity_name">Please Enter Activity Name</string>
    <string name="pending">Pending</string>
</resources>