<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginAndSingup.SignupHawker" >

    <TextView
        android:id="@+id/tvHawkerEAN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/eatatnotts"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/HawkerSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvHawkerEAN"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/tvHawkerEAN"
        app:layout_constraintTop_toBottomOf="@+id/tvHawkerEAN"
        app:layout_constraintVertical_bias="0.061" />

    <TextView
        android:id="@+id/HawkerUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/username"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/HawkerSignup"
        app:layout_constraintStart_toStartOf="@+id/HawkerSignup"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etHawkerUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/please_enter_username"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/HawkerUsername"
        app:layout_constraintStart_toStartOf="@+id/HawkerUsername"
        app:layout_constraintTop_toBottomOf="@+id/HawkerUsername"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/HawkerEMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/e_mail"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etHawkerUsername"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etHawkerUsername"
        app:layout_constraintTop_toBottomOf="@+id/etHawkerUsername"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/HawkerPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/password"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etHawkerEMail"
        app:layout_constraintStart_toStartOf="@+id/etHawkerEMail"
        app:layout_constraintTop_toBottomOf="@+id/etHawkerEMail"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnHawkerSignup"
        android:layout_width="206dp"
        android:layout_height="42dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="30dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etHawkerPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etHawkerPassword"
        app:layout_constraintTop_toBottomOf="@+id/etHawkerPassword"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39">

        <Button
            android:id="@+id/HawkerToStudent"
            android:layout_width="102dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:text="@string/customer"
            android:textColor="#000000"
            android:textSize="25sp" />

        <Button
            android:id="@+id/HawkerToHawker"
            android:layout_width="112dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/hawker"
            android:textSize="25sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/etHawkerEMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/please_enter_e_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/HawkerEMail"
        app:layout_constraintHorizontal_bias="0.677"
        app:layout_constraintStart_toStartOf="@+id/HawkerEMail"
        app:layout_constraintTop_toBottomOf="@+id/HawkerEMail"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etHawkerPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/please_enter_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/HawkerPassword"
        app:layout_constraintStart_toStartOf="@+id/HawkerPassword"
        app:layout_constraintTop_toBottomOf="@+id/HawkerPassword"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnHawkerLogin"
        android:layout_width="191dp"
        android:layout_height="46dp"
        android:text="Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnHawkerSignup"
        app:layout_constraintStart_toStartOf="@+id/btnHawkerSignup"
        app:layout_constraintTop_toBottomOf="@+id/btnHawkerSignup" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.803"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.778" />

    <EditText
        android:id="@+id/etLocation"
        android:layout_width="181dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="Enter Location"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etHawkerDescription"
        android:layout_width="158dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="Enter Description"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.844" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="292dp"
        android:layout_height="173dp"
        android:src="@drawable/eatatnottssymbol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>