<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:id="@+id/frameLayout" android:layout_width="match_parent" android:layout_height="match_parent" tools:context=".LoginAndSingup.SignupStudent">

    <TextView
        android:id="@+id/StudentSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.073" />

    <TextView
        android:id="@+id/StudentEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:text="@string/e_mail"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/StudentSignup"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="@color/hint"
        app:boxBackgroundMode="outline"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/design_default_color_primary_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="@+id/StudentEmail"
        app:layout_constraintTop_toBottomOf="@+id/StudentEmail"
        app:layout_constraintVertical_bias="0.0"
        app:startIconDrawable="@drawable/baseline_email_24">

        <EditText
            android:id="@+id/etStudentEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Please Enter an E-mail"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/StudentPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/password"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etEmail"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/StudentConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="Confirm Password:"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnStudentSignup"
        android:layout_width="206dp"
        android:layout_height="42dp"
        android:backgroundTint="@color/buttons"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etConfirmPassword"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/etConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword"
        app:layout_constraintVertical_bias="0.198" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39">
        <Button
            android:id="@+id/StudentToStudent"
            android:layout_width="102dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/customer"
            android:textSize="25sp"/>
        <Button
            android:id="@+id/StudentToHawker"
            android:layout_width="112dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:text="@string/hawker"
            android:textColor="#000000"
            android:textSize="25sp"/>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="@color/hint"
        app:passwordToggleEnabled="true"
        app:boxBackgroundMode="outline"
        app:hintTextColor="@color/hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/StudentConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/StudentConfirmPassword"
        app:layout_constraintVertical_bias="0.0"
        app:startIconDrawable="@drawable/baseline_password_24">

        <EditText
            android:id="@+id/etStudentConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Please Confirm Password(Minimum 6 Characters)"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/etPassword"
    android:layout_width="0dp"
    android:layout_height="65dp"
    android:layout_marginRight="40dp"
    android:backgroundTint="@color/hint"
    app:passwordToggleEnabled="true"
    app:boxBackgroundMode="outline"
    app:hintTextColor="@color/hint"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="@+id/StudentPassword"
    app:layout_constraintTop_toBottomOf="@+id/StudentPassword"
    app:layout_constraintVertical_bias="0.0"
    app:startIconDrawable="@drawable/baseline_password_24">

        <EditText
            android:id="@+id/etStudentPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Please Enter Password(Minimum 6 Characters)"
            android:inputType="textPassword" />
</com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnStudentLogin"
        android:layout_width="191dp"
        android:layout_height="46dp"
        android:backgroundTint="@color/buttons"
        android:text="Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnStudentSignup"
        app:layout_constraintStart_toStartOf="@+id/btnStudentSignup"
        app:layout_constraintTop_toBottomOf="@+id/btnStudentSignup" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="292dp"
        android:layout_height="173dp"
        android:src="@drawable/eatatnottssymbol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />
</androidx.constraintlayout.widget.ConstraintLayout>