<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity" >

    <TextView
        android:id="@+id/HawkerAddActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="Add Activity"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/ActivityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/activity_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/HawkerAddActivity"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/HawkerAddActivity"
        app:layout_constraintTop_toBottomOf="@+id/HawkerAddActivity"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/description"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etActivityName"
        app:layout_constraintStart_toStartOf="@+id/etActivityName"
        app:layout_constraintTop_toBottomOf="@+id/etActivityName"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnAddActivity"
        android:layout_width="206dp"
        android:layout_height="42dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/buttons"
        android:text="Add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etDescription"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etDescription"
        app:layout_constraintTop_toBottomOf="@+id/etDescription"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etActivityName"
        android:layout_width="235dp"
        android:layout_height="50dp"
        android:background="@drawable/text_box"
        android:ems="10"
        android:hint="@string/please_enter_activity_name"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ActivityName"
        app:layout_constraintStart_toStartOf="@+id/ActivityName"
        app:layout_constraintTop_toBottomOf="@+id/ActivityName"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="235dp"
        android:layout_height="50dp"
        android:background="@drawable/text_box"
        android:ems="10"
        android:hint="Please enter Description"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Description"
        app:layout_constraintStart_toStartOf="@+id/Description"
        app:layout_constraintTop_toBottomOf="@+id/Description"
        app:layout_constraintVertical_bias="0.0" />
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/HawkertopAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="3dp"
            android:background="#3496D3"
            android:elevation="4dp"
            app:title="Add Activity"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:menu="@menu/hawker_top_app_bar"
            app:navigationIcon="@drawable/baseline_arrow_back_24" />
    </com.google.android.material.appbar.AppBarLayout>
</androidx.constraintlayout.widget.ConstraintLayout>